--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 This project contains work in progress to produce a fedora compatible RPM for the Scratch project.
 
+KNOWN BUG: --update to add .spec to tar file will do so multiple times, leading to rpm build failiure resolution is to clean first and re-run
